--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "install": "^0.13.0",
     "next": "15.1.3",
+    "npm": "^11.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
