--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@googlemaps/js-api-loader": "^1.16.8",
     "install": "^0.13.0",
     "next": "15.1.3",
     "npm": "^11.0.0",
