Todo listo excepto imágenes reales del restaurante en portada y sección nosotros

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,10 @@
     "Csvg",
     "googlemaps",
     "Guarn",
+    "Inzulza",
+    "Linkedin",
+    "noopener",
+    "noreferrer",
     "Xmark"
   ]
 }
