--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@googlemaps/js-api-loader": "^1.16.8",
-    "install": "^0.13.0",
-    "next": "15.1.3",
-    "npm": "^11.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "^15.1.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
