--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
+  "engines": {
+    "node": ">=18.18.0"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "critters": "^0.0.23",
