--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,15 +3,18 @@
     "Andwanter",
     "Anwandter",
     "brûlée",
+    "changefreq",
     "Cpath",
     "crème",
     "Csvg",
     "googlemaps",
     "Guarn",
     "Inzulza",
+    "lastmod",
     "Linkedin",
     "noopener",
     "noreferrer",
+    "urlset",
     "Xmark"
   ]
 }
